<resources>
    <string name="app_name">Challenge Ch02</string>
    <string name="ada_voucher">Ada voucher nganggur, nih</string>
    <string name="resto_dekat">Restaurant terdekat</string>
    <string name="rp">Rp. 17.000</string>
    <string name="isi_saldo">Isi saldo Shopee pay</string>
    <string name="koin">50 Koin</string>
    <string name="klaim">Klaim koin disini</string>
    <string name="gopay">gopay</string>
    <string name="rp_gopay">Rp. 108.048</string>
    <string name="klik_cek"><![CDATA[Klik & cek riwayat]]></string>
    <string name="gopay_koin">gopay coins</string>
    <string name="coins">0 coins</string>
    <string name="gopay_later">gopaylater</string>
    <string name="f">F</string>
    <string name="sale">ASH SALE</string>
    <string name="lihat">Lihat Lainnya</string>
    <string name="harta">193 XP lagi ada Harta Karun</string>
    <string name="harta_hilang">Harta Karun bentar lagi hilang</string>
    <string name="festival">Festival Idaman Perempuan !</string>
    <string name="temukan">Temukan kebutuhan cantik-mu hemat pakai GoPay</string>
    <string name="dengan">dengan cashback 50%. klik!</string>
    <string name="goride">GoRide</string>
    <string name="gocar">GoCar</string>
    <string name="gofood">GoFood</string>
    <string name="gosend">GoSend</string>
    <string name="gomart">GoMart</string>
    <string name="gopulsa">GoPulsa</string>
    <string name="check_in">Check in</string>
    <string name="lainnya">Lainnya</string>
    <string name="pedulilindungi">PeduliLindungi</string>
    <string name="pulsa_tagihan"><![CDATA[Pulsa, Tagihan & \n\t\tHiburan]]></string>
    <string name="shopee_supermarket">\t\tShopee Supermarket</string>
    <string name="shopee_mall">Shopee Mall</string>
    <string name="shopeepay_sekitarmu">ShopeePay Sekitarmu</string>
    <string name="elektronik">Elektronik 100% ORI</string>
    <string name="infasion">\tInFasion</string>
    <string name="shopee_pilih_lokal">\tShopee Pilih Lokal</string>
    <string name="promo_bank">Promo Bank</string>
    <string name="shopee_murah_lebay">\tShopee Murah Lebay</string>
    <string name="gratis_ongkir"><![CDATA[Gratis Ongkir & \n\t\tVoucher]]></string>
    <string name="shopee_games">Shopee Games</string>
    <string name="bayar_di_tempat">Bayar Di Tempat</string>
    <string name="shopeefood">ShopeeFood</string>
    <string name="serba_seribu">Serba Seribu</string>
    <string name="spay_later">SPay Later</string>
    <string name="shopee_cuci_gudang">Shopee Cuci \n\tGudang</string>
    <string name="shopee_live">Shopee Live</string>
    <string name="shopee_feed">Shopee Feed</string>
    <string name="semua_promo">Semua Promo</string>
    <string name="bayar_gopay">Bayar</string>
    <string name="isi_saldo_gopay">Isi Saldo</string>
    <string name="eksplor">Eksplor</string>
    <string name="nav_beranda_gojek">Beranda</string>
    <string name="nav_promo_gojek">Promo</string>
    <string name="nav_pesanan_gojek">Pesanan</string>
    <string name="nav_chat_gojek">Chat</string>
    <string name="nav_rekomendasi_shopee">Rekomendasi</string>
    <string name="nav_feed_shopee">Feed</string>
    <string name="nav_shopee_live_shopee">Shopee Live</string>
    <string name="nav_notifikasi_shopee">Notifikasi</string>
    <string name="nav_saya_shopee">Saya</string>
</resources>