<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:columnCount="10"
    android:rowCount="4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:src="@drawable/peduli_lindungi"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:src="@drawable/pulsa_tagihan_hiburan"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:src="@drawable/shopee_supermarket"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:src="@drawable/shopee_mall"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:src="@drawable/shopee_pay_sekitarmu"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/elektronik"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/shopee_fasion"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/shopee_lokal"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/shopee_promo_bank"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/shopee_mubay"
            android:layout_width="50dp"
            android:layout_height="50dp"/>



        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="11sp"
            android:textColor="@color/black"
            android:text="@string/pedulilindungi"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/pulsa_tagihan"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/shopee_supermarket"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textSize="11sp"
            android:textColor="@color/black"
            android:text="@string/shopee_mall"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/shopeepay_sekitarmu"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/elektronik"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/infasion"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/shopee_pilih_lokal"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/promo_bank"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/shopee_murah_lebay"
            android:textColor="@color/black"
            android:textSize="11sp" />




        <ImageView
            android:src="@drawable/shopee_voucher"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:src="@drawable/shopee_games"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:src="@drawable/cod"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:src="@drawable/shopee_food"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:src="@drawable/serba_seribu"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:src="@drawable/shopee_pay"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:src="@drawable/shopee_cuci_gudang"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:src="@drawable/shopee_live"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:src="@drawable/shopee_feed"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:src="@drawable/semua_promo"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />



        <TextView
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gratis_ongkir"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/shopee_games"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:layout_marginEnd="5dp"
            android:text="@string/bayar_di_tempat"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:layout_marginStart="7dp"
            android:layout_marginEnd="5dp"
            android:text="@string/shopeefood"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_marginStart="7dp"
            android:layout_marginEnd="5dp"
            android:text="@string/serba_seribu"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/spay_later"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:text="@string/shopee_cuci_gudang"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:text="@string/shopee_live"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:text="@string/shopee_feed"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/semua_promo"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

</GridLayout>



