<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:columnCount="4"
    android:rowCount="4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/goride" />

        <ImageView
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/gocar" />

        <ImageView
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/gofood"/>

        <ImageView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/gosend" />



        <TextView
            android:layout_marginBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/goride"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/gocar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/gofood"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/gosend"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>



        <ImageView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/gomart"/>

        <ImageView
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/gopulsa"/>

        <ImageView
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/checkin"/>

        <ImageView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/lainnya"/>



        <TextView
            android:layout_marginBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/gomart"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/gopulsa"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/check_in"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/lainnya"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </GridLayout>