<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="380dp"
    android:layout_height="60dp">

        <ImageView
            android:layout_margin="5dp"
            android:src="@drawable/scan"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <RelativeLayout
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pay"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/payment"/>

            <TextView
                android:textColor="@color/black"
                android:layout_marginStart="3dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/pay"
                android:text="@string/rp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textStyle="bold"
                android:layout_below="@+id/pay"
                android:text="@string/isi_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginEnd="5dp"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/koin"
                android:src="@drawable/koin"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:textColor="@color/black"
                android:layout_marginStart="3dp"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/koin"
                android:textStyle="bold"
                android:text="@string/koin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textStyle="bold"
                android:layout_below="@id/koin"
                android:text="@string/klaim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

</LinearLayout>

