<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:background="@color/blue"
    android:columnCount="3"
    android:rowCount="2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_height="25dp"
            android:layout_width="25dp"
            android:src="@drawable/bayar"/>

        <ImageView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:layout_height="25dp"
            android:layout_width="25dp"
            android:src="@drawable/isi_saldo"/>

        <ImageView
            android:layout_marginStart="20dp"
            android:layout_height="25dp"
            android:layout_width="25dp"
            android:src="@drawable/eksplor"/>

        <TextView
            android:layout_marginEnd="15dp"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="@string/bayar_gopay"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="@string/isi_saldo_gopay"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="@string/eksplor"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

</GridLayout>
